--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@3.0.4
+        uses: JamesIves/github-pages-deploy-action@master
         with:
           ACCESS_TOKEN: ${{ secrets.ACTIONS_CI }}
           BASE_BRANCH: master # The branch the action should deploy from.
