--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.0.4
         with:
@@ -11,3 +14,4 @@ jobs:
           BASE_BRANCH: master
           BRANCH: gh-pages
           FOLDER: build
+          BUILD_SCRIPT: npm install && npm run build
