--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Build and Deploy
+      - name: Build
+        run: npm install && npm run build
+
+      - name: Deploy to gh-pages
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACTIONS_CI }}
